2003-08-07    claudiuc
	* start: started the 'irda' utility project
